# JNIStudy

./: settings.gradle
AnkerEngine/src/main/cpp/: AOsLog.h  AnkerEngine.cpp  CMakeLists.txt  dbgcrash.cpp  dbgcrash.h
AnkerEngine/src/main/cpp/CuraEngine/: CMakeLists.txt  main.cpp
AnkerEngine/src/main/cpp/CuraEngine/cmake/: ConfigureAllModules.cmake  ConfigureTarget.cmake  TestLibCL.cmake  openmp.cmake
AnkerEngine/src/main/cpp/CuraEngine/src/: Application.cpp  Application.h  FffGcodeWriter.cpp  FffGcodeWriter.h  FffPolygonGenerator.cpp  FffPolygonGenerator.h  FffProcessor.cpp  FffProcessor.h  GCodePathConfig.cpp  GCodePathConfig.h  GcodeLayerThreader.h  InsetOrderOptimizer.cpp  InsetOrderOptimizer.h  LayerPlan.cpp  LayerPlan.h  LayerPlanBuffer.cpp  MeshGroup.cpp  PathOrderMonotonic.h  PrintFeature.h  Scene.cpp  SkirtBrim.cpp  SkirtBrim.h  WallsComputation.cpp  Wireframe2gcode.cpp  gcodeExport.cpp  gcodeExport.h  infill.cpp  layerPart.cpp  pathOrderOptimizer.cpp  skin.cpp  skin.h  sliceDataStorage.h  slicer.cpp  support.cpp  timeEstimate.cpp  timeEstimate.h
AnkerEngine/src/main/cpp/CuraEngine/src/AnkerGcode/: gcodeExportOptimize_CL.cpp  gcodeExportOptimize_CL.h  gcodeExport_CL.cpp
AnkerEngine/src/main/cpp/CuraEngine/src/communication/: ArcusCommunication.cpp  CommandLine.cpp
AnkerEngine/src/main/cpp/CuraEngine/src/settings/: EnumSettings.h  PathConfigStorage.cpp  PathConfigStorage.h  Settings.cpp  ZSeamConfig.cpp  ZSeamConfig.h
AnkerEngine/src/main/cpp/CuraEngine/src/settings/types/: Angle.h
AnkerEngine/src/main/cpp/CuraEngine/src/utils/: DecodeUtils.hpp  FMatrix4x3.h  Point3.h  SVG.cpp  SVG.h  getpath.cpp  gettime.cpp  gettime.h  logoutput.cpp  logoutput.h  polygon.cpp  polygon.h  polygonUtils.cpp
AnkerEngine/src/main/cpp/cmake/: ConfigureProperty.cmake  ConfigureTarget.cmake
AnkerEngine/src/main/cpp/sliceservice/: AnkerCloudSlice.cpp  AnkerCloudSlice.h  CMakeCache.txt  CMakeLists.txt  ParamUtil.cpp  ParamUtil.h  ProcessHelper.cpp  ProcessHelper.h  commondef.h  sliceservice.cpp  sliceservice.h  typedef.h
AnkerEngine/src/main/cpp/sliceservice/libs/arm64-v8a/harfbuzz-2.8.2/: Makefile  config.h  config.status  configure,tmp  libtool
AnkerEngine/src/main/cpp/sliceservice/libs/arm64-v8a/harfbuzz-2.8.2/docs/: Makefile
AnkerEngine/src/main/cpp/sliceservice/libs/arm64-v8a/harfbuzz-2.8.2/src/: Makefile  Makefile.in  libharfbuzz-subset.la  libharfbuzz-subset.la.tmp  libharfbuzz.la  libharfbuzz_la-hb-aat-map.lo  libharfbuzz_la-hb-buffer.lo  libharfbuzz_la-hb-draw.lo  libharfbuzz_la-hb-face.lo  libharfbuzz_la-hb-fallback-shape.lo  libharfbuzz_la-hb-number.lo  libharfbuzz_la-hb-ot-cff1-table.lo  libharfbuzz_la-hb-ot-color.lo  libharfbuzz_la-hb-ot-layout.lo  libharfbuzz_la-hb-ot-map.lo  libharfbuzz_la-hb-ot-name.lo  libharfbuzz_la-hb-ot-shape-complex-arabic.lo  libharfbuzz_la-hb-ot-shape-complex-default.lo  libharfbuzz_la-hb-ot-shape-complex-indic-table.lo  libharfbuzz_la-hb-ot-shape-complex-khmer.lo  libharfbuzz_la-hb-ot-shape-complex-thai.lo  libharfbuzz_la-hb-ot-shape-complex-vowel-constraints.lo  libharfbuzz_la-hb-ot-shape-fallback.lo  libharfbuzz_la-hb-ot-shape-normalize.lo  libharfbuzz_la-hb-set.lo  libharfbuzz_la-hb-shape.lo  libharfbuzz_la-hb-shaper.lo  libharfbuzz_la-hb-static.lo  libharfbuzz_la-hb-style.lo  libharfbuzz_la-hb-ucd.lo  libharfbuzz_subset_la-hb-ot-cff2-table.lo  libharfbuzz_subset_la-hb-static.lo  libharfbuzz_subset_la-hb-subset-input.lo  libharfbuzz_subset_la-hb-subset-plan.lo  main  test  test-buffer-serialize  test-gpos-size-params  test-gsub-would-substitute  test-ot-glyphname  (+2 more)
AnkerEngine/src/main/cpp/sliceservice/libs/arm64-v8a/harfbuzz-2.8.2/test/: Makefile
AnkerEngine/src/main/cpp/sliceservice/libs/arm64-v8a/harfbuzz-2.8.2/util/: Makefile
AnkerEngine/src/main/cpp/sliceservice/libs/arm64-v8a/icu-le-hb-1.0.3/: Makefile  config.status  configure  configure,tmp  icu-le-hb.pc  libtool
AnkerEngine/src/main/cpp/sliceservice/libs/arm64-v8a/icu-le-hb-1.0.3/src/: Makefile  libicu_le_hb_la-LEGlyphStorage.lo  libicu_le_hb_la-ScriptAndLanguageTags.lo  libicu_le_hb_la-loengine.lo
AnkerEngine/src/main/cpp/sliceservice/libs/arm64-v8a/icu/source/: icudefs.mk,tmp
AnkerEngine/src/main/cpp/sliceservice/libs/arm64-v8a/lib/: charset.alias  libiconv.la  libicu-le-hb.so.0.0.0
AnkerEngine/src/main/cpp/sliceservice/libs/arm64-v8a/lib/pkgconfig/: harfbuzz-subset.pc  harfbuzz.pc  icu-i18n.pc  icu-io.pc  icu-uc.pc
AnkerEngine/src/main/cpp/sliceservice/libs/arm64-v8a/libiconv-1.15/: Makefile  config.h  config.status  libtool
AnkerEngine/src/main/cpp/sliceservice/libs/arm64-v8a/libiconv-1.15/lib/: Makefile  config.h  libiconv.la
AnkerEngine/src/main/cpp/sliceservice/libs/arm64-v8a/libiconv-1.15/libcharset/: Makefile  config.h  config.status  libtool
AnkerEngine/src/main/cpp/sliceservice/libs/arm64-v8a/libiconv-1.15/man/: Makefile
AnkerEngine/src/main/cpp/sliceservice/libs/arm64-v8a/libiconv-1.15/po/: Makefile  Makefile.in
AnkerEngine/src/main/cpp/sliceservice/libs/arm64-v8a/libiconv-1.15/preload/: Makefile  config.status  libiconv.la  libtool
AnkerEngine/src/main/cpp/sliceservice/libs/arm64-v8a/libiconv-1.15/srclib/: Makefile  stdint.h
AnkerEngine/src/main/cpp/sliceservice/libs/arm64-v8a/libiconv-1.15/tests/: Makefile
AnkerEngine/src/main/cpp/sliceservice/libs/arm64-v8a/sbin/: escapesrc  gensprep
AnkerEngine/src/main/cpp/sliceservice/libs/armeabi-v7a/harfbuzz-2.8.2/: Makefile  config.h  config.status  configure  libtool
AnkerEngine/src/main/cpp/sliceservice/libs/armeabi-v7a/harfbuzz-2.8.2/docs/: Makefile
AnkerEngine/src/main/cpp/sliceservice/libs/armeabi-v7a/harfbuzz-2.8.2/src/: Makefile  harfbuzz.pc  (+41 more)
AnkerEngine/src/main/cpp/sliceservice/libs/armeabi-v7a/icu-le-hb-1.0.3/: Makefile  Makefile.in  config.status  libtool
AnkerEngine/src/main/cpp/sliceservice/libs/armeabi-v7a/lib/: libharfbuzz-subset.la  libiconv.la  libicu-le-hb.so.0.0.0
AnkerEngine/src/main/cpp/sliceservice/libs/armeabi-v7a/libiconv-1.15/: Makefile  config.h  config.status  libtool
AnkerEngine/src/main/cpp/sliceservice/libs/armeabi-v7a/sbin/: escapesrc  gensprep
(+410 files in other folders)
